--- a/private_dot_config/alacritty/alacritty.toml
+++ b/private_dot_config/alacritty/alacritty.toml
@@ -47,15 +47,15 @@ color = '#db4b4b'
 size = 16.0
 
 [font.bold]
-family = "Fira Mono"
+family = "CommitMono"
 style = "Bold"
 
 [font.italic]
-family = "Fira Mono"
+family = "CommitMono"
 style = "Italic"
 
 [font.normal]
-family = "Fira Mono"
+family = "CommitMono"
 style = "Regular"
 
 [[keyboard.bindings]]
