feat(mise): Explicitly pin versions
Avoid adopting latest and greatest versions automatically and pin the
used tools explicitly to the current versions. Going forwards the
version bumps should be a more concious process.

Some of the CLI tools, like `eza`, `fd`, `fzf`, are now installed from
source through either `cargo` or `go`. Their compile times are fairly
short, so building locally is not that much overhead. For large
packages, like `uv`, the compile times exceed 10s of minutes, so the
binary version is adopted (for now).

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -3,12 +3,14 @@ idiomatic_version_file_enable_tools = []
 experimental = true
 
 [tools]
-eza = "latest"
-fd = "latest"
-fzf = "latest"
-neovim = "latest"
-python = "latest"
-ripgrep = "latest"
-tmux = "latest"
-uv = "latest"
+"cargo:eza" = "0.23.3"
+"cargo:fd-find" = "10.3.0"
+"go:github.com/junegunn/fzf" = "0.65.2"
+neovim = "0.11.4"
+python = "3.13.7"
+"cargo:ripgrep" = "14.1.1"
+rust = "1.90.0"
+tmux = "3.5a"
+uv = "0.8.18"
+go = "1.25.1"
 
