--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -3,14 +3,14 @@ idiomatic_version_file_enable_tools = []
 experimental = true
 
 [tools]
-"cargo:eza" = "0.23.3"
-"cargo:fd-find" = "10.3.0"
-"go:github.com/junegunn/fzf" = "0.65.2"
+eza = "0.23.4"
+fd = "10.3.0"
+fzf = "0.66.1"
 neovim = "0.11.4"
-python = "3.13.7"
-"cargo:ripgrep" = "14.1.1"
-rust = "1.90.0"
+python = "3.14.0"
+ripgrep = "15.1.0"
+rust = "1.91.0"
 tmux = "3.5a"
-uv = "0.8.18"
-go = "1.25.1"
+uv = "0.9.7"
+go = "1.25.3"
 
